# PassGenerator

./: .gitignore  CMakeLists.txt  Main.qml  README.md  connector.cpp  connector.h  generator.cpp  generator.h  main.cpp
resources/: AutoClosePopup.qml  PassGenerator.rc  resources.qrc
